minor fixes on US9 and US11

--- a/src/main/python/matcp.ipynb
+++ b/src/main/python/matcp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 176,
    "id": "d2b1ebe0-4aee-431d-b5f9-32734f1ce966",
    "metadata": {
     "tags": []
@@ -34,13 +34,15 @@
       "\n",
       "PARKS WITH HIGHEST AND LOWEST WATER CONSUMPTION\n",
       "\n",
-      "\n",
       "Park with highest water consumption in one day: Cidade\n",
-      "Maior consumo registado:  922.6546875\n",
+      "Highest consumption registered:  922.6546875\n",
       "Mean consumption: 117.53\n",
       "Median consumption: 86.00\n",
       "Standard deviation: 71.06\n",
       "Coefficient of skewness: 4.14\n",
+      "\n",
+      "RELATIVE AND ABSOLUTE FREQUENCY TABLE\n",
+      "\n",
       "     Classe  Limite Inferior  Limite Superior  Freq. Absoluta  Freq. Relativa\n",
       "0  Classe 1        61.750000       233.930937             435        0.199358\n",
       "1  Classe 2       233.930937       406.111875              13        0.005958\n",
@@ -92,11 +94,14 @@
      "text": [
       "\n",
       "Park with lowest (not null) water consumption in one day: ArcaAgua\n",
-      "Menor consumo registado:  4.75\n",
+      "Lowest consumption registered:  4.75\n",
       "Mean consumption: 9.02\n",
       "Median consumption: 6.81\n",
       "Standard deviation: 4.84\n",
       "Coefficient of skewness: 2.18\n",
+      "\n",
+      "RELATIVE AND ABSOLUTE FREQUENCY TABLE\n",
+      "\n",
       "     Classe  Limite Inferior  Limite Superior  Freq. Absoluta  Freq. Relativa\n",
       "0  Classe 1          4.75000         13.64375             374        0.171402\n",
       "1  Classe 2         13.64375         22.53750              77        0.035289\n",
@@ -224,12 +229,12 @@
     "    data = data[data['Consumption'] > 0]\n",
     "    daily_park_consumption = data.groupby(['Date', 'Park'])['Consumption'].sum()\n",
     "    park_with_max_consumption = daily_park_consumption.idxmax()[1]\n",
-    "    print('\\nPark with highest water consumption in one day:', park_with_max_consumption)\n",
-    "    print('Maior consumo registado: ', data['Consumption'].max())\n",
+    "    print('Park with highest water consumption in one day:', park_with_max_consumption)\n",
+    "    print('Highest consumption registered: ', data['Consumption'].max())\n",
     "    park_statistics(park_with_max_consumption)\n",
     "    park_with_min_consumption = daily_park_consumption.idxmin()[1]\n",
     "    print('\\nPark with lowest (not null) water consumption in one day:', park_with_min_consumption)\n",
-    "    print('Menor consumo registado: ', data['Consumption'].min())\n",
+    "    print('Lowest consumption registered: ', data['Consumption'].min())\n",
     "    park_statistics(park_with_min_consumption)\n",
     "\n",
     "def histograms_creation(park_data):\n",
@@ -299,6 +304,7 @@
     "        'Freq. Absoluta': absolute_frequencies,\n",
     "        'Freq. Relativa': relative_frequencies\n",
     "    })\n",
+    "    print('\\nRELATIVE AND ABSOLUTE FREQUENCY TABLE\\n')\n",
     "    print(frequency_table)\n",
     "    check_outliers(park_data, median)\n",
     "    histograms_creation(park_data)\n",
@@ -365,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 184,
    "id": "6ad38460-d380-4b70-a1d1-82365da59a1a",
    "metadata": {
     "tags": []
@@ -375,6 +381,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Types of each variables: \n",
+      "1: variável quantitativa contínua\n",
+      "2: variável qualitativa \n",
+      "3: variável quantitiva discreta\n",
+      "\n",
+      "Proportion of users from each age group who would recommend the park to others\n",
       "         count  proportion\n",
       "Escalao                   \n",
       "1          131       0.473\n",
@@ -398,6 +410,9 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
+    "print('Types of each variables: \\n1: variável quantitativa contínua\\n2: variável qualitativa \\n3: variável quantitiva discreta\\n')\n",
+    "\n",
     "# obtain data\n",
     "data = pd.read_csv('Inquiry.csv', header=0, sep=';')\n",
     "\n",
@@ -407,6 +422,7 @@
     "# calculate proportions\n",
     "proportion = data.groupby('Escalao')['Y/N'].apply(lambda x: (x == 'Y').sum() / len(x))\n",
     "results = pd.DataFrame({'count': age_group_count, 'proportion': proportion.round(3)})\n",
+    "print('Proportion of users from each age group who would recommend the park to others')\n",
     "print(results)\n",
     "\n",
     "# create boxplot\n",
