conclusion of matcp user stories

--- a/src/main/python/matcp.ipynb
+++ b/src/main/python/matcp.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b6ecebe4",
+   "metadata": {},
+   "source": [
+    "# US09 - Introdução\n",
+    "\n",
+    "Na qualidade de gestor de espaços verdes (GEV), é importante conhecer os custos exatos associados ao consumo de água em cada parque específico. Esta informação permite gerir estas despesas de forma eficiente.\n",
+    "\n",
+    "Como tal, propomos uma análise estatística do consumo de água e dos custos associados em todos os parques municipais. O ficheiro \"water_consumption.csv\" contém os dados diários de consumo de água (em m3) desde a data de abertura de cada parque. O preço da água é de 0,7 €/m3 até um consumo mensal de 1000 m3, acrescentando-se uma taxa de 15% para consumos superiores.\n",
+    "\n",
+    "O ficheiro de dados contém as seguintes informações: \"Identificação do Parque\", \"Ano\", \"Mês\", \"Dia\" e \"Consumo\". Iremos utilizar estes dados para obter os seguintes resultados:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 176,
    "id": "d2b1ebe0-4aee-431d-b5f9-32734f1ce966",
@@ -329,6 +344,89 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "54ba7a1d",
+   "metadata": {},
+   "source": [
+    "# US09 - Análise e interpretação dos resultados\n",
+    "\n",
+    "Analisamos o consumo de água em parques, realizando diversos cálculos e visualizações estatísticas.\n",
+    "\n",
+    "1. monthly_water_consumption(ano, mes_inicial, mes_final, id_parque):\n",
+    "\n",
+    "Esta função serve como base para outras. Ela filtra os dados de um parque específico entre um intervalo de meses e ano informados, agrupando o consumo por mês e criando um gráfico de barras para visualização.\n",
+    "\n",
+    "2. calculate_costs(consumo_mensal):\n",
+    "\n",
+    "Esta função calcula o custo mensal da água de acordo com o consumo. Se o consumo for menor ou igual a 1000 unidades, o custo é o consumo multiplicado por 0,7. Acima de 1000, há uma tarifa adicional de 15% sobre o excedente.\n",
+    "\n",
+    "3. average_monthly_costs(n_parques, ids_parques):\n",
+    "\n",
+    "Esta função calcula o custo médio mensal da água para vários parques. Ela filtra os dados para o ano de 2023 ou superior e agrupa o consumo por mês e parque. Em seguida, calcula o custo para cada mês usando a função calculate_costs e por fim calcula a média dos custos totais dividindo pelo número total de meses com dados.\n",
+    "\n",
+    "4. highest_lowest_consumption():\n",
+    "\n",
+    "Esta função encontra o parque com maior consumo diário de água e o parque com menor consumo diário (considerando apenas valores positivos). Ela também calcula o valor máximo e mínimo de consumo diário registrados.\n",
+    "\n",
+    "5. park_statistics(id_parque):\n",
+    "\n",
+    "Esta função realiza diversas análises estatísticas para um parque específico. Ela calcula:\n",
+    "\n",
+    "* Média do consumo\n",
+    "\n",
+    "$$\\overline{X} = \\frac{1}{n}\\sum\\limits_{i=1}^{n} X_i$$\n",
+    "  \n",
+    "* Mediana do consumo\n",
+    "\n",
+    "$$M = \\begin{cases} \\frac{x_({\\frac{n}{2}}) + x_({\\frac{n+2}{2}})}{2} & \\text{se n é par}\\\\ \\\\ x_({\\frac{n+1}{2}}) & \\text{se n é ímpar} \\end{cases}$$\n",
+    "  \n",
+    "* Desvio padrão do consumo\n",
+    "\n",
+    "$$s = \\sqrt{s^2}$$\n",
+    "  \n",
+    "* Coeficiente de assimetria do consumo (Skewness)\n",
+    "\n",
+    "$$a_3 = \\frac{m_3}{s_3}$$\n",
+    "  \n",
+    "* Frequência absoluta e relativa para classes de consumo (com 5 classes iguais)\n",
+    "\n",
+    "$$f_i = \\sum_{x \\in \\text{Class } i} (x)$$\n",
+    "\n",
+    "$$f_i^{rel} = \\frac{f_i}{N}$$\n",
+    "  \n",
+    "* Detecta outliers (valores discrepantes) com base no IQR (Intervalo Quartilar)\n",
+    "\n",
+    "$$IQR = q_3 - q_1$$\n",
+    "\n",
+    "$$\\text{Outlier Threshold} = 1.5 \\times IQR$$\n",
+    "  \n",
+    "* Cria histogramas com 10 e 100 classes para visualizar a distribuição do consumo\n",
+    "\n",
+    "O código gera diversos outputs que precisam ser interpretados de acordo com a função utilizada:\n",
+    "\n",
+    "* monthly_water_consumption: O gráfico de barras permite visualizar o padrão de consumo de água ao longo dos meses selecionados para um parque específico.\n",
+    "* average_monthly_costs: Esta função fornece o custo médio mensal da água para cada parque. É interessante comparar o custo entre parques e analisar se há variação significativa.\n",
+    "* highest_lowest_consumption: Esta função identifica os parques com maior e menor consumo diário de água, podendo indicar possíveis problemas de má gestão ou vazamentos.\n",
+    "* park_statistics: O output desta função é bastante rica em informações. A média e mediana informam o valor central do consumo, enquanto o desvio padrão indica a dispersão dos dados em torno da média. O coeficiente de assimetria (skewness) indica se a distribuição do consumo é simétrica ou assimétrica (positiva ou negativa). A tabela de frequências permite visualizar a distribuição do consumo em classes, e o histograma é outra ferramenta para visualização da distribuição. A identificação de outliers pode indicar valores atípicos que merecem investigação."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "acfdbe03",
+   "metadata": {},
+   "source": [
+    "# US10 - Introdução\n",
+    "\n",
+    "Como Gestor de Espaços Verdes (GEV), compreender as preferências dos utilizadores é fundamental para gerir e melhorar o parque.\n",
+    "\n",
+    "Neste cenário, o parque disponibiliza vários equipamentos, como trilhos para caminhadas, merendas e equipamentos de ginástica. À saída do parque, existe um dispositivo eletrónico com uma lista de todos os equipamentos. Os utilizadores devem selecionar o(s) equipamento(s) que utilizaram nesse dia.\n",
+    "\n",
+    "O ficheiro \"EquipmentUsed.csv\" regista as escolhas de 1000 utilizadores. Iremos utilizar estes dados para criar um gráfico circular que represente, em percentagem, a utilização de cada equipamento do parque. Este gráfico irá permitir-nos identificar quais os equipamentos mais populares e, assim, tomar decisões informadas sobre a manutenção e potencial expansão do parque."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 169,
    "id": "cccfa4c6-13cc-4036-ba60-a1f2f0f92393",
@@ -367,6 +465,49 @@
     "plt.title('Percentage use of each piece of equipment')\n",
     "#plt.axis('equal')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ec922f31",
+   "metadata": {},
+   "source": [
+    "# US10 - Análise e interpretação dos resultados\n",
+    "\n",
+    "Para a criação do gráfico a cima utilizamos os dados de um arquivo CSV \"EquipmentUsed.csv\" , que contem a frequência de uso de cada equipamento.\n",
+    "\n",
+    "Este código cria um gráfico que permite a visualização a distribuição percentual do uso de cada equipamento. O tamanho de cada fatia do pizza representa a proporção do uso de cada equipamento específico em relação ao total."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6d95bfd8",
+   "metadata": {},
+   "source": [
+    "# US11 - Introdução\n",
+    "\n",
+    "Compreender a utilização do parque pelas diferentes faixas etárias é crucial para um Gestor de Espaços Verdes (GEV). Esta informação permite direcionar ações de forma a tornar o parque mais atrativo e inclusivo para todos.\n",
+    "\n",
+    "Para analisar o uso do parque, foi inserido um questionário de três perguntas no portal do utilizador:\n",
+    "\n",
+    "* Pergunta 1: Faixa Etária\n",
+    "Tipo de Resposta: Categórica (1 - Criança (até 15 anos), 2 - Adulto (16 a 65 anos), 3 - Sénior (acima de 65 anos))\n",
+    "\n",
+    "* Pergunta 2: Recomenda o parque a outros?\n",
+    "Tipo de Resposta: Binária (Y/N)\n",
+    "\n",
+    "* Pergunta 3: Quantas vezes frequenta o parque por mês?\n",
+    "Tipo de Resposta: Numérica\n",
+    "\n",
+    "As respostas obtidas encontram-se guardadas no ficheiro \"Inquiry.csv\". Iremos utilizar estes dados para:\n",
+    "\n",
+    "* Identificar o tipo de variável associada a cada pergunta.\n",
+    "\n",
+    "* Analisar a percentagem de utilizadores de cada faixa etária que recomendaria o parque.\n",
+    "\n",
+    "* Criar um diagrama de caixa para cada faixa etária, considerando a frequência mensal de utilização do parque. Iremos retirar conclusões sobre os padrões de uso do parque face à idade.\n"
    ]
   },
   {
@@ -436,12 +577,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7159fdf9-91ab-4089-86f0-43b8672a225b",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "368fc07f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# US11 - Análise e interpretação dos resultados\n",
+    "\n",
+    "A primeira parte do código calcula algumas estatísticas descritivas para os dados. Ele lê os dados de um arquivo CSV \"Inquiry.csv\".\n",
+    "\n",
+    "Proporção de recomendação por faixa etária: O código calcula a proporção de usuários de cada faixa etária que recomendaria o parque para outras pessoas. Agrupa os dados por faixa etária (\"Escalao\") e então calcula a média da variável binária \"Y/N\" (onde \"Y\" significa recomendação). Os resultados são armazenados no dataframe \"results\" e impressos.\n",
+    "\n",
+    "A segunda parte do código cria um boxplot para visualizar a distribuição da frequência mensal de uso do parque por faixa etária.\n",
+    "\n",
+    "Boxplot: O boxplot é um gráfico que mostra a distribuição de um conjunto de dados através de quartis (25%, 50% e 75%) e outliers (valores atípicos). Permite identificar diferenças na distribuição da frequência de uso do parque entre as diferentes faixas etárias. O código define o rótulo do eixo x como \"Faixa etária\" e o rótulo do eixo y como \"Frequência mensal de uso do parque\".\n",
+    "\n",
+    "Outputs:\n",
+    "\n",
+    "1. O tipo de variável associada a cada pergunta.\n",
+    "\n",
+    "2. A tabela que mostra a proporção de users que recomendariam o parque para cada faixa etária. \n",
+    "\n",
+    "3. O boxplot mostra a distribuição da frequência de uso do parque. Podemos observar se há alguma faixa etária que utiliza o parque com maior frequência. O boxplot também pode indicar a presença de outliers, que podem ser users que visitam o parque com muita frequência ou pouquíssima frequência."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "16599e12",
+   "metadata": {},
+   "source": [
+    "# Contribuição\n",
+    "\n",
+    "*  - \n",
+    "*  - \n",
+    "* 1211134 - \n"
+   ]
   }
  ],
  "metadata": {
