added contribution percentage of matcp

--- a/src/main/python/matcp.ipynb
+++ b/src/main/python/matcp.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b6ecebe4",
    "metadata": {},
@@ -344,7 +343,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "54ba7a1d",
    "metadata": {},
@@ -412,7 +410,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "acfdbe03",
    "metadata": {},
@@ -468,7 +465,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ec922f31",
    "metadata": {},
@@ -481,7 +477,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6d95bfd8",
    "metadata": {},
@@ -577,7 +572,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "368fc07f",
    "metadata": {},
@@ -602,16 +596,15 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "16599e12",
    "metadata": {},
    "source": [
-    "# Contribuição\n",
+    "# Contribution of the group\n",
     "\n",
-    "*  - \n",
-    "*  - \n",
-    "* 1211134 - \n"
+    "* 1211134 Pedro Viana - 30%\n",
+    "* 1211199 Eduardo Carreiro - 30%\n",
+    "* 1221401 Beatriz Morais - 40%\n"
    ]
   }
  ],
