--- a/src/main/python/sprint3.ipynb
+++ b/src/main/python/sprint3.ipynb
@@ -253,10 +253,18 @@
    "source": [
     "## Contribuição do grupo\n",
     "\n",
-    "* 1211134 Pedro Viana - \n",
-    "* 1211199 Eduardo Carreiro - \n",
-    "* 1221401 Beatriz Morais - "
+    "* 1211134 Pedro Viana - 33,3%\n",
+    "* 1211199 Eduardo Carreiro - 33,3%\n",
+    "* 1221401 Beatriz Morais - 33,3%"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6dc0616-d0c2-42c7-9c6f-479a694f2b18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
